Renamed to PaybackOS

--- a/grub.cfg
+++ b/grub.cfg
@@ -1,6 +1,6 @@
 timeout=1
 default=0
 
-menuentry "SpiteOS" {
-    multiboot /boot/SpiteOS.bin debug
+menuentry "PaybackOS" {
+    multiboot /boot/PaybackOS.bin debug
 }
