added in GDT, and IDT.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "multiboot.h": "c",
-        "stdarg.h": "c"
+        "stdarg.h": "c",
+        "debug.h": "c"
     }
 }
