--- a/make.config
+++ b/make.config
@@ -2,7 +2,7 @@
 CC = i686-elf-gcc
 AS = i686-elf-as
 LD = i686-elf-gcc
-CFLAGS = -std=gnu99 -ffreestanding -O2 -Wall -Wextra -Isrc/headers/ -Isrc/headers/stdio/
+CFLAGS = -std=gnu99 -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
 LDFLAGS = -ffreestanding -O2 -nostdlib -lgcc
 
 # Find all source files in src/ and its subdirectories
