reimplemented the kernel in C++ instead of C

--- a/make.config
+++ b/make.config
@@ -1,20 +1,20 @@
 # Define the compiler and flags
-CC = i686-elf-gcc
+CXX = i686-elf-g++  # Add C++ compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
-CFLAGS = -std=gnu99 -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
+CXXFLAGS = -std=gnu++17 -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
 LDFLAGS = -ffreestanding -O2 -nostdlib -lgcc
 
 # Find all source files in src/ and its subdirectories
 SRCS_S = $(shell find src/ -name '*.s')
 SRCS_ASM = $(shell find src/ -name '*.asm')
-SRCS_C = $(shell find src/ -name '*.c')
+SRCS_CPP = $(shell find src/ -name '*.cpp')  # Find C++ source files
 
 # Find all object files in src/ and its subdirectories
 OBJ_S = $(SRCS_S:src/%.s=src/%.o)
 OBJ_ASM = $(SRCS_ASM:src/%.asm=src/%.o)
-OBJ_C = $(SRCS_C:src/%.c=src/%.o)
-OBJ = $(OBJ_S) $(OBJ_ASM) $(OBJ_C)
+OBJ_CPP = $(SRCS_CPP:src/%.cpp=src/%.o)  # Define object files for C++
+OBJ = $(OBJ_S) $(OBJ_ASM) $(OBJ_CPP)  # Include C++ objects
 
 # Define the kernel binary
 TARGET = PaybackOS.bin
