--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
-    "files.associations": {
-        "multiboot.h": "c",
-        "stdarg.h": "c",
-        "debug.h": "c",
-        "stdio.h": "c",
-        "string.h": "c",
-        "stdint.h": "c",
-        "stdbool.h": "c",
-        "tty.h": "c"
-    }
+  "files.associations": {
+    "multiboot.h": "c",
+    "stdarg.h": "c",
+    "debug.h": "c",
+    "stdio.h": "c",
+    "string.h": "c",
+    "stdint.h": "c",
+    "stdbool.h": "c",
+    "tty.h": "c"
+  },
+  "C_Cpp_Runner.msvcBatchPath": ""
 }
