attempted to make userspace code compile without the src/headers code due to that being used in the kernel only and all needing ring 0.

--- a/make.config
+++ b/make.config
@@ -3,6 +3,7 @@ CXX = i686-elf-g++  # Add C++ compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
 CXXFLAGS = -std=gnu++17 -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
+USERCXXFLAGS = -std=gnu++17 -ffreestanding -O2 -Wall -Wextra -Isrc/userspace/headers/
 LDFLAGS = -ffreestanding -O2 -nostdlib -lgcc
 
 # Find all source files in src/ and its subdirectories
