Add code to call global constructors; fix heap code incrementing void *; add a qemudbg.sh script; makefile fixes; build with debug info

--- a/make.config
+++ b/make.config
@@ -2,8 +2,9 @@
 CXX = i686-elf-g++  # Add C++ compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
-CXXFLAGS = -std=gnu++17 -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
-USERCXXFLAGS = -std=gnu++17 -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
+CXXFLAGS = -g -std=gnu++17 -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
+USERCXXFLAGS = -g -std=gnu++17 -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
+ASFLAGS = -g
 LDFLAGS = -ffreestanding -O2 -nostdlib -lgcc
 
 # Find all source files in src/ and its subdirectories
