--- a/make.config
+++ b/make.config
@@ -5,7 +5,7 @@ LD = i686-elf-gcc
 CXXFLAGS = -g -std=gnu++17 -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
 USERCXXFLAGS = -g -std=gnu++17 -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
 ASFLAGS = -g
-LDFLAGS = -no-pie -nostdlib -lgcc
+LDFLAGS = -no-pie -nostdlib -lgcc -z noexecstack
 
 # Find all source files in src/ and its subdirectories
 SRCS_S = $(shell find src/ -name '*.s')
