Reduce preferred stack boundary to 2 (4 bytes) to avoid alignment issues with ISR stubs Use -mgeneral-regs-only option to not generate SSE/SIMD instructions in the kernel.

--- a/make.config
+++ b/make.config
@@ -2,8 +2,8 @@
 CXX = i686-elf-g++  # Add C++ compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
-CXXFLAGS = -g -std=gnu++17 -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
-USERCXXFLAGS = -g -std=gnu++17 -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
+CXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
+USERCXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
 ASFLAGS = -g
 LDFLAGS = -no-pie -nostdlib -lgcc -z noexecstack
 
