added halt syscall and rebuilt heap and added in C support

--- a/make.config
+++ b/make.config
@@ -1,9 +1,12 @@
 # Define the compiler and flags
 CXX = i686-elf-g++  # Add C++ compiler
+CC = i686-elf-gcc    # Add C compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
 CXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
+CFLAGS = -g -std=gnu99 -ffreestanding -O2 -Wall -Wextra -c  # Add C flags for the C compiler
 USERCXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
+USERCFLAGS = -g -std=gnu99 -ffreestanding -O2 -Wall -Wextra -c -Iuserspace/headers/
 ASFLAGS = -g
 LDFLAGS = -no-pie -nostdlib -lgcc -z noexecstack
 
@@ -11,12 +14,14 @@ LDFLAGS = -no-pie -nostdlib -lgcc -z noexecstack
 SRCS_S = $(shell find src/ -name '*.s')
 SRCS_ASM = $(shell find src/ -name '*.asm')
 SRCS_CPP = $(shell find src/ -name '*.cpp')  # Find C++ source files
+SRCS_C = $(shell find src/ -name '*.c')      # Find C source files
 
 # Find all object files in src/ and its subdirectories
-OBJ_S = $(SRCS_S:src/%.s=src/%.o)
-OBJ_ASM = $(SRCS_ASM:src/%.asm=src/%.o)
-OBJ_CPP = $(SRCS_CPP:src/%.cpp=src/%.o)  # Define object files for C++
-OBJ = $(OBJ_S) $(OBJ_ASM) $(OBJ_CPP)  # Include C++ objects
+OBJ_S = $(SRCS_S:src/%.s=obj/%.o)
+OBJ_ASM = $(SRCS_ASM:src/%.asm=obj/%.o)
+OBJ_CPP = $(SRCS_CPP:src/%.cpp=obj/%.o)  # Define object files for C++
+OBJ_C = $(SRCS_C:src/%.c=obj/%.o)        # Define object files for C
+OBJ = $(OBJ_S) $(OBJ_ASM) $(OBJ_CPP) $(OBJ_C)  # Include all objects
 
 # Define the kernel binary
 TARGET = PaybackOS.bin
