--- a/make.config
+++ b/make.config
@@ -4,9 +4,9 @@ CC = i686-elf-gcc    # Add C compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
 CXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
-CFLAGS = -g -std=gnu99 -ffreestanding -O2 -Wall -Wextra -c -Isrc/headers/ # Add C flags for the C compiler
+CFLAGS = -g -std=gnu99 -mpreferred-stack-boundary=2 -mgeneral-regs-only -ffreestanding -O2 -Wall -Wextra -c -Isrc/headers/ # Add C flags for the C compiler
 USERCXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
-USERCFLAGS = -g -std=gnu99 -ffreestanding -O2 -Wall -Wextra -c -Iuserspace/headers/
+USERCFLAGS = -g -std=gnu99 -mpreferred-stack-boundary=2 -mgeneral-regs-only -ffreestanding -O2 -Wall -Wextra -c -Iuserspace/headers/
 ASFLAGS = -g
 LDFLAGS = -no-pie -nostdlib -lgcc -z noexecstack
 
