Cleanup make.config and Makefile to reduce duplication of flags

--- a/make.config
+++ b/make.config
@@ -3,10 +3,13 @@ CXX = i686-elf-g++  # Add C++ compiler
 CC = i686-elf-gcc    # Add C compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
-CXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Isrc/headers/
-CFLAGS = -g -std=gnu99 -mpreferred-stack-boundary=2 -mgeneral-regs-only -ffreestanding -O2 -Wall -Wextra -c -Isrc/headers/ # Add C flags for the C compiler
-USERCXXFLAGS = -g -std=gnu++17 -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-rtti -fno-exceptions -fno-pic -fno-use-cxa-atexit -ffreestanding -O2 -Wall -Wextra -Iuserspace/headers/
-USERCFLAGS = -g -std=gnu99 -mpreferred-stack-boundary=2 -mgeneral-regs-only -ffreestanding -O2 -Wall -Wextra -c -Iuserspace/headers/
+SHARED_FLAGS = -g -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-pic -ffreestanding -O2 -Wall -Wextra 
+SHARED_CXX_FLAGS = $(SHARED_FLAGS) -std=gnu++17  -fno-rtti -fno-exceptions -fno-use-cxa-atexit
+SHARED_C_FLAGS = $(SHARED_FLAGS) -std=gnu99
+CXXFLAGS = $(SHARED_CXX_FLAGS) -Isrc/headers/
+CFLAGS = $(SHARED_C_FLAGS) -Isrc/headers/ # Add C flags for the C compiler
+USERCXXFLAGS = $(SHARED_CXX_FLAGS) -Iuserspace/headers/
+USERCFLAGS = $(SHARED_C_FLAGS) -Iuserspace/headers/
 ASFLAGS = -g
 LDFLAGS = -no-pie -nostdlib -lgcc -z noexecstack
 
