added in new kernel flag crashme

--- a/grub.cfg
+++ b/grub.cfg
@@ -1,6 +1,8 @@
 timeout=1
 default=0
 
+# Use the flag crashme to test things that may crash the system
+
 menuentry "PaybackOS" {
     multiboot /boot/PaybackOS.elf debug
 }
