--- a/grub.cfg
+++ b/grub.cfg
@@ -1,8 +1,14 @@
 timeout=1
 default=0
 
-# Use the flag crashme to test things that may crash the system
-
 menuentry "PaybackOS" {
+    multiboot /boot/PaybackOS.elf
+}
+
+menuentry "PaybackOS (debug)" {
     multiboot /boot/PaybackOS.elf debug
+}
+
+menuentry "PaybackOS (fulldebug will crash)" {
+    multiboot /boot/PaybackOS.elf crashme
 }
