--- a/make.config
+++ b/make.config
@@ -1,36 +1,19 @@
 # Define the compiler and flags
-CXX = i686-elf-g++  # Add C++ compiler
 CC = i686-elf-gcc    # Add C compiler
 AS = i686-elf-as
 LD = i686-elf-gcc
 SRC_DIR = kernel
 USERSPACE_DIR = userspace
+SHARED_DIR = shared
 OBJ_DIR = obj
-SHARED_FLAGS = -g -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-pic -ffreestanding -O2 -Wall -Wextra 
-SHARED_CXX_FLAGS = $(SHARED_FLAGS) -std=gnu++17  -fno-rtti -fno-exceptions -fno-use-cxa-atexit
-SHARED_C_FLAGS = $(SHARED_FLAGS) -std=gnu99
-CXXFLAGS = $(SHARED_CXX_FLAGS) -I$(SRC_DIR)/headers/
-CFLAGS = $(SHARED_C_FLAGS) -I$(SRC_DIR)/headers/ # Add C flags for the C compiler
-USERCXXFLAGS = $(SHARED_CXX_FLAGS) -I$(USERSPACE_DIR)/headers/
-USERCFLAGS = $(SHARED_C_FLAGS) -I$(USERSPACE_DIR)/headers/
+SHARED_FLAGS = -g -mpreferred-stack-boundary=2 -mgeneral-regs-only -fno-pic -ffreestanding -O2 -Wall -Wextra -std=gnu99
+SHAREDCFLAGS = $(SHARED_FLAGS) -I$(SHARED_DIR)/headers/
+CFLAGS = $(SHAREDCFLAGS) -I$(SRC_DIR)/headers/
+USERCFLAGS = $(SHAREDCFLAGS) -I$(USERSPACE_DIR)/headers/
 ASFLAGS = -g
 LDFLAGS = -no-pie -nostdlib -lgcc -z noexecstack
 
-# Find all source files in kernel/ and its subdirectories
-SRCS_S = $(shell find kernel/ -name '*.s')
-SRCS_ASM = $(shell find kernel/ -name '*.asm')
-SRCS_CPP = $(shell find kernel/ -name '*.cpp')  # Find C++ source files
-SRCS_C = $(shell find kernel/ -name '*.c')      # Find C source files
-
-# Find all object files in kernel/ and its subdirectories
-OBJ_S = $(SRCS_S:kernel/%.s=obj/%.o)
-OBJ_ASM = $(SRCS_ASM:kernel/%.asm=obj/%.o)
-OBJ_CPP = $(SRCS_CPP:kernel/%.cpp=obj/%.o)  # Define object files for C++
-OBJ_C = $(SRCS_C:kernel/%.c=obj/%.o)        # Define object files for C
-OBJ = $(OBJ_S) $(OBJ_ASM) $(OBJ_CPP) $(OBJ_C)  # Include all objects
-
-# Define the kernel binary
-TARGET = PaybackOS.bin
-
 # Define the build target
 ALL: build iso
+
+test: build clean
