made it more simple (rewrote) now it can run locally and run on github pages (good for testing)

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
+---
 title: PaybackOS
-description: A custom OS
-show_downloads: false
-google_analytics: false
-theme: jekyll-theme-hacker
-author: ThatOSDeveloper
+description: PaybackOS is a minimal OS
+theme: jekyll-theme-architect
+author: The PaybackOS team
+---
